--- a/src/main/resources/templates/readingList.html
+++ b/src/main/resources/templates/readingList.html
@@ -9,5 +9,15 @@
             <span th:text="${book.title}"></span>
         </div>
     </div>
+
+    <h2>Add a book</h2>
+    <form method="POST">
+        <label for="title">Title:</label>
+        <input type="text" name="title" size="50"></input><br />
+        <label for="author">Author:</label>
+        <input type="text" name="author" size="50"></input>
+
+        <input type="submit"></input>
+    </form>
 </body>
 </html>
