Add add reading function

--- a/src/main/resources/templates/readinglist.html
+++ b/src/main/resources/templates/readinglist.html
@@ -10,5 +10,11 @@
             <span th:text="${reading.name}"></span>
         </div>
     </div>
+
+    <h1>Add a new book</h1>
+    <form method="post">
+        <input name="name"/><br/>
+        <input type="submit" />
+    </form>
 </body>
 </html>
